fix: change to use getId() untill we update to Java 21